--- a/libs/stocks/feature-shell/src/lib/stocks/stocks.component.html
+++ b/libs/stocks/feature-shell/src/lib/stocks/stocks.component.html
@@ -1,35 +1,24 @@
 <form [formGroup]="stockPickerForm">
   <mat-form-field>
-    <input
-      matInput
-      placeholder="Symbol e.g AAPL"
-      formControlName="symbol"
-      value=""
-    />
-    <mat-error
-      ><span
-        *ngIf="
+    <input role="textbox" matInput placeholder="Symbol e.g AAPL" formControlName="symbol" value="" aria-label="symbol" />
+    <mat-error>
+      <span *ngIf="
           !stockPickerForm.get('symbol').valid &&
           stockPickerForm.get('symbol').touched
-        "
-        >Please enter a symbol</span
-      >
+        ">Please enter a symbol</span>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Favorite time period</mat-label>
-    <mat-select formControlName="period">
-      <mat-option
-        *ngFor="let timePeriod of timePeriods"
-        [value]="timePeriod.value"
-      >
+    <mat-select tabindex="0" formControlName="period">
+      <mat-option *ngFor="let timePeriod of timePeriods" [value]="timePeriod.value">
         {{ timePeriod.viewValue }}
       </mat-option>
     </mat-select>
   </mat-form-field>
 
-  <button (click)="fetchQuote()" mat-raised-button>Go</button>
+  <button aria-label="fetchQuote" (click)="fetchQuote()" mat-raised-button>Go</button>
 </form>
 
 <coding-challenge-chart [data$]="quotes$"></coding-challenge-chart>
